version/0.22/_sources/api/solver/_autosummary/settings/anode_sigma.rst.txt
:orphan:

.. _anode_sigma:

anode_sigma
===========

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.anode_sigma.anode_sigma
    :show-inheritance:

.. rubric:: Attributes

============================================   ============================================================

Attribute                                                                                           Summary

============================================   ============================================================
:ref:`method <method_4>`                                                    Select method for the property.

:ref:`value <value_5>`                                                  Set constant value for the profile.

:ref:`piecewise_linear <piecewise_linear_1>`       Specify ranges and values for piecewise-linear property.

:ref:`polynomial <polynomial_1>`                                          Define a polynomial data profile.

:ref:`user_defined <user_defined_5>`                                 UDF name for the user-defined profile.

============================================   ============================================================

.. rubric:: Included in:

==============================================   ================================

Parent                                                                    Summary

==============================================   ================================
:ref:`p2d_model_settings <p2d_model_settings>`       Newman's P2D model settings.

==============================================   ================================

